--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.8",
+    "echarts": "^5.5.0",
     "element-plus": "^2.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-video-player": "^5.0.1",
     "vue3-cookies": "^1.0.6",
     "xlsx": "^0.18.5"
   },
