--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.5.0",
     "element-plus": "^2.7.2",
     "pinia": "^2.1.7",
+    "video.js": "^8.12.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-video-player": "^5.0.1",
